--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,8 @@
   <span> EdZest PMP Flash Card </span>
 </mat-toolbar>
 
-<div class="container-wrapper"> 
-  <h2> Hello Piyush! </h2>
-  <h4> Select your level </h4>
+<div class="container-wrapper">
+  <div class="container">
+    <app-word-card [word]="word"></app-word-card>
+  </div>
 </div>
