add action buttons

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,6 @@
 
 <div class="container-wrapper">
   <div class="container">
-    <app-word-card [word]="word"></app-word-card>
+    <app-word-card-container></app-word-card-container>
   </div>
 </div>
