--- a/src/app/word-card/word-card.component.html
+++ b/src/app/word-card/word-card.component.html
@@ -1,15 +1,15 @@
 <mat-card class="word-card">
-  <mat-card-content>
+  <mat-card-content (click)="onCardClick()">
     <div class="word-container">
       <h2>{{ word.title }}</h2>
-      <!-- <p> {{ word.description }} </p> -->
+      <p *ngIf="showMeaning"> {{ word.description }} </p>
     </div>
   </mat-card-content>
-  <mat-card-actions>
-    <button mat-button>LIKE</button>
-    <button mat-button>SHARE</button>
+  <mat-card-actions *ngIf="showMeaning">
+    <button mat-button (click)="onWordAction(false)">I didn't know this word</button>
+    <button mat-button (click)="onWordAction(true)"> I knew this word</button>
   </mat-card-actions>
   <mat-card-footer>
-    <p>Tap to see the meaning</p>
+    <p *ngIf="!showMeaning">Tap to see the meaning</p>
   </mat-card-footer>
 </mat-card>
