add congrats text

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,12 @@
 p {
   font-family: Lato;
 }
+
+.congrats h1 {
+  font-family: 'Oleo Script', cursive;
+}
+
+.congrats {
+  margin: 14px;
+  text-align: center;
+}
