update congrats text

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,9 +6,10 @@
   <div class="container">
     <app-word-card-container *ngIf="!levelComplete" (levelComplete)="onLevelComplete($event)"></app-word-card-container>
 
-    <div class="congrats">
+    <div *ngIf="levelComplete" class="congrats">
       <h1>Congratulations</h1>
-      <p> You have learnt all the words in this level.<p>
+      <p> You have learnt all the words in this level. <span class="home-nav">Click here </span> to go to the home page.
+      <p>
     </div>
   </div>
 </div>
