--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,19 @@
 <mat-toolbar color="primary">
-  <span> EdZest PMP Flash Card </span>
+  <span> EdZest PMP Flash Cards </span>
 </mat-toolbar>
 
 <div class="container-wrapper">
   <div class="container">
-    <app-word-card-container *ngIf="!levelComplete" (levelComplete)="onLevelComplete($event)"></app-word-card-container>
+
+    <app-word-levels *ngIf="!selectedLevel" (selectLevel)="onLevelSelect($event)"></app-word-levels>
+
+    <app-word-card-container *ngIf="!levelComplete && selectedLevel" (levelComplete)="onLevelComplete($event)">
+    </app-word-card-container>
 
     <div *ngIf="levelComplete" class="congrats">
       <h1>Congratulations</h1>
-      <p> You have learnt all the words in this level. <span class="home-nav">Click here </span> to go to the home page.
+      <p> You have learnt all the words in this level. <span class="home-nav" (click)="resetLevel()">Click here </span>
+        to go to the home page.
       <p>
     </div>
   </div>
