--- a/src/app/word-card-container/word-card-container.component.html
+++ b/src/app/word-card-container/word-card-container.component.html
@@ -3,5 +3,5 @@
 <div class="progress">
   <b>Remaining words: </b> {{ words.length + 1 }}
   <br/>
-  <b>Words learnt so far: </b> {{ learntWords.length }}
+  <b>Words learnt so far: </b> {{ learntWordIds.length }}
 </div>
