--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,53 @@
 <mat-toolbar color="primary">
-  <span> EdZest PMP Flash Cards </span>
+  <span><b>PMP Flash Cards</b></span>
 </mat-toolbar>
 
-<div class="container-wrapper">
+<div class="main-container">
+  <div class="banner">
+    <div class="banner-img">
+      <img src="https://image.freepik.com/free-vector/studying-concept-illustration_114360-1301.jpg" alt="" height="100%">
+    </div>
+    <div class="banner-text">
+      <h1>PMP<span>&reg;</span> Flash Cards</h1>
+      <h2>by EdZest</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat.</p>
+
+      <button mat-button>Start Practising Now</button>
+    </div>
+
+  </div>
+</div>
+
+<div class="secondary-banner">
+  <div class="main-container">
+    <div class="info">
+      <h2>1500 Strategically chosen words</h2>
+      <h2>Never lose your progress</h2>
+      <h2>Forever free to use</h2>
+    </div>
+  </div>
+</div>
+
+<div class="main-container">
+  <div class="container">
+    <h1>Level up your PMP<span>&reg;</span> skills</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+      magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+      consequat.Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+      consequat.Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+      consequat.</p>
+  </div>
+</div>
+
+<!-- <div class="container-wrapper">
   <div class="container">
 
     <app-word-levels *ngIf="!selectedLevel" (selectLevel)="onLevelSelect($event)"></app-word-levels>
 
-    <app-word-card-container *ngIf="!levelComplete && selectedLevel" (levelComplete)="onLevelComplete($event)" [selectedLevel]="selectedLevel">
+    <app-word-card-container *ngIf="!levelComplete && selectedLevel" (levelComplete)="onLevelComplete($event)"
+      [selectedLevel]="selectedLevel">
     </app-word-card-container>
 
     <div *ngIf="levelComplete" class="congrats">
@@ -17,4 +57,4 @@
       <p>
     </div>
   </div>
-</div>
+</div> -->
