--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,11 @@
   <span><b>PMP Flash Cards</b></span>
 </mat-toolbar>
 
-<div class="main-container">
+
+<app-login></app-login>
+
+<!-- HOME page - (todo) move to a separate component -->
+<!-- <div class="main-container">
   <div class="banner">
     <div class="banner-img">
       <img src="https://image.freepik.com/free-vector/studying-concept-illustration_114360-1301.jpg" alt="" height="100%">
@@ -39,7 +43,7 @@
       consequat.Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
       consequat.</p>
   </div>
-</div>
+</div> -->
 
 <!-- <div class="container-wrapper">
   <div class="container">
