--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,8 +1,28 @@
-.container {
-  max-width: 750px;
-  margin: 150px auto;
+:host {
+  display: flex;
+  justify-content: center;
+  margin: 100px 0px;
 }
 
-.card-container {
+.mat-form-field {
+  width: 100%;
+  min-width: 300px;
+}
+
+mat-card-title,
+mat-card-content {
   display: flex;
+  justify-content: center;
+}
+
+.error {
+  padding: 16px;
+  width: 300px;
+  color: white;
+  background-color: red;
+}
+
+.button {
+  display: flex;
+  justify-content: flex-end;
 }
