--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,16 +1,27 @@
-<div class="container">
-  <mat-card>
-    <div class="card-container">
-      <div class="login-form">
-        <mat-card-title>
-          <h2>Login to your account</h2>
-        </mat-card-title>
-        <mat-card-subtitle>Don't have an account? <span>Register now.</span></mat-card-subtitle>
-        <mat-card-content></mat-card-content>
+<mat-card>
+  <mat-card-title>Login</mat-card-title>
+  <mat-card-content>
+    <form [formGroup]="form" (ngSubmit)="submit()">
+      <p>
+        <mat-form-field>
+          <input type="text" matInput placeholder="Username" formControlName="username">
+        </mat-form-field>
+      </p>
+
+      <p>
+        <mat-form-field>
+          <input type="password" matInput placeholder="Password" formControlName="password">
+        </mat-form-field>
+      </p>
+
+      <p *ngIf="error" class="error">
+        {{ error }}
+      </p>
+
+      <div class="button">
+        <button type="submit" mat-button>Login</button>
       </div>
-      <div class="login-img">
-        <!-- <img src="https://image.freepik.com/free-photo/lonely-hiker_181624-361.jpg" alt="" height="50%"> -->
-      </div>
-    </div>
-  </mat-card>
-</div>
+
+    </form>
+  </mat-card-content>
+</mat-card>
