--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 </mat-toolbar>
 
 
-<app-login></app-login>
+<app-login (submitEM)="onLoginSubmit($event)"></app-login>
 
 <!-- HOME page - (todo) move to a separate component -->
 <!-- <div class="main-container">
