--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,8 @@
 <mat-toolbar color="primary">
-  <span><b>PMP Flash Cards</b></span>
+  <span routerLink="/"><b>PMP Flash Cards</b></span>
 </mat-toolbar>
 
 
 <!-- <app-login (submitEM)="onLoginSubmit($event)"></app-login> -->
 
 <router-outlet></router-outlet>
-
-
