--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,38 +1,58 @@
- <div class="main-container">
-  <div class="banner">
-    <div class="banner-img">
-      <img src="https://image.freepik.com/free-vector/studying-concept-illustration_114360-1301.jpg" alt="" height="100%">
+<div class="home">
+  <div class="main-container">
+    <div class="banner">
+      <div class="banner-img">
+        <img src="https://image.freepik.com/free-vector/studying-concept-illustration_114360-1301.jpg" alt="" height="100%">
+      </div>
+      <div class="banner-text">
+        <h1>PMP<span>&reg;</span> Flash Cards</h1>
+        <h2>by EdZest</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat.</p>
+
+        <a routerLink="/cards" mat-button class="main-btn">Start Practising Now</a>
+      </div>
+
     </div>
-    <div class="banner-text">
-      <h1>PMP<span>&reg;</span> Flash Cards</h1>
-      <h2>by EdZest</h2>
+  </div>
+
+  <div class="secondary-banner">
+    <div class="main-container">
+      <div class="info">
+        <h2>1500 Strategically chosen words</h2>
+        <h2>Never lose your progress</h2>
+        <h2>Forever free to use</h2>
+      </div>
+    </div>
+  </div>
+
+  <div class="main-container">
+    <div class="container">
+      <h1>Level up your PMP<span>&reg;</span> skills</h1>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
         magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat.Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat.Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
         consequat.</p>
-
-      <button mat-button>Start Practising Now</button>
     </div>
-
   </div>
-</div>
 
-<div class="secondary-banner">
   <div class="main-container">
-    <div class="info">
-      <h2>1500 Strategically chosen words</h2>
-      <h2>Never lose your progress</h2>
-      <h2>Forever free to use</h2>
+    <div class="container">
+      <h1>About EdZest</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat.Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat.Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat.</p>
+    </div>
+  </div>
+
+
+  <div class="secondary-banner">
+    <div class="main-container">
+
     </div>
   </div>
 </div>
-
-<div class="main-container">
-  <div class="container">
-    <h1>Level up your PMP<span>&reg;</span> skills</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-      magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-      consequat.Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-      consequat.Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-      consequat.</p>
-  </div>
-</div> 
